examples/errors/keyword_typo.fil
diagramm componnet;

type Database = Rectangle [color="blue"];

// This should trigger keyword typo detection
frontend: Rectangle [color="red"];
backend: Database;

frontend -> backend;
